8315377: C2: assert(u->find_out_with(Op_AddP) == nullptr) failed: more than 2 chained AddP nodes?

Backport-of: ba1a46392f0b9c77c64278f82513aaf51f5c9b1b